tools/tests/errors/surf_name_07.ki
# name resolution: undefined name in a default-parameter expression
var f = Function(x = startvalue):
    return x
discard f()
